--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 *.pyc
 */.ipynb_checkpoints/*
 machine_learning_algorithm/PCA/.ipynb_checkpoints/01-checkpoint.ipynb
+machine_learning_algorithm/decision_tree/.ipynb_checkpoints/01-decision-tree-checkpoint.ipynb
